<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home2">

    <fragment
        android:id="@+id/navigation_home2"
        android:name="com.example.myapplication.ui.home2.HomeFragment2"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home2" />

    <fragment
        android:id="@+id/navigation_dashboard2"
        android:name="com.example.myapplication.ui.dashboard2.DashboardFragment2"
        android:label="@string/title_dashboard2"
        tools:layout="@layout/fragment_dashboard2" />

    <fragment
        android:id="@+id/navigation_notifications2"
        android:name="com.example.myapplication.ui.notifications2.NotificationsFragment2"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications2" />

</navigation>